--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-WAIT_FOR_RSC_ON_PAGE_LOADS=True
-TIMEOUT=30
+API_URL="http://5b847b30db24a100142dce1b.mockapi.io/api/v1/simulador"
+BASE_URL="https://www.sicredi.com.br/html/ferramenta/simulador-investimento-poupanca/"
